# VAE-AD-Test

./: LICENSE  README.md  experiment.py  experiment_power.sh  experiment_robustness.sh  experiment_typeIerror.sh  install.sh  non_gaussian_noise.py  pyproject.toml  util.py
experiment_script/: fpr.sh  fpr_ar1.sh  fpr_robust_005.sh  fpr_robust_01.sh  tpr.sh  tpr_ar1.sh
plot/: plot.py  result_synthetic.csv
si4vae/: __init__.py  model.py  si.py  util.py
submodules/si4dnn/: pyproject.toml
submodules/si4dnn/si4dnn/: layers.py  nn.py  si.py
trained_models/: test_model_64.h5  test_vae_model_16.h5  test_vae_model_32.h5  test_vae_model_64.h5  test_vae_model_8.h5
