[tool.poetry]
name = "si4vae"
version = "0.1.0"
description = ""
authors = ["anonymous <anonymous@anonymous>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tensorflow = "^2.13.0"
numpy = "^1.25.2"
scipy = "^1.11.2"
mpmath = "^1.3.0"
tqdm = "^4.66.1"
wandb = "^0.15.10"
fire = "^0.5.0"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.3"
pytest = "^7.4.2"
ipython = "^8.15.0"
black = "^23.9.1"
isort = "^5.12.0"
fire = "^0.5.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
